--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -20,15 +20,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-instantsearch-dom": "^6.38.3",
-    "@meilisearch/instant-meilisearch": "0.11.0"
+    "@meilisearch/instant-meilisearch": "0.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-instantsearch-dom": "^6.39.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "eslint-config-meilisearch": "*"
   }
 }
