--- a/playgrounds/vue3-ts/package.json
+++ b/playgrounds/vue3-ts/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "0.11.0",
-    "vue": "^3.2.45",
-    "vue-instantsearch": "^4.7.2"
+    "vue": "^3.2.47",
+    "vue-instantsearch": "^4.8.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.11",
-    "eslint-config-meilisearch": "*"
+    "eslint-config-meilisearch": "*",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
   }
 }
